--- a/FormandTable/CSS/T0908I.css
+++ b/FormandTable/CSS/T0908I.css
@@ -1,7 +1,12 @@
-table{}
+table{
+    border-width: 3px;
+}
 caption, .blue{
     color: blue;
 }
 .cam{
     background-color: orange;
+}
+.yellow{
+    background-color: yellow;
 }
