--- a/FormandTable/CSS/formsurvey.css
+++ b/FormandTable/CSS/formsurvey.css
@@ -1,6 +1,9 @@
 .H{
     font-size: 26px;
 }
+.cls_1{
+    border-style:inset;width: 900px;
+}
 p{
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -9,4 +12,7 @@ p{
 }
 .digrey{
     background-color: rgb(226, 224, 224);
+}
+table{
+    border-collapse: collapse;
 }
