--- a/FormandTable/CSS/T0908I.css
+++ b/FormandTable/CSS/T0908I.css
@@ -7,7 +7,9 @@ caption, .blue{
 }
 .cam{
     background-color: orange;
+    height: 25px;
 }
 .yellow{
     background-color: yellow;
+    height: 25px;
 }
